<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    card_view:cardBackgroundColor="?attr/cardBgColor"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/card_cover_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:adjustViewBounds="true"
                card_view:srcCompat="@drawable/corrected_reading_default" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/card_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_title"
                    android:textColor="?attr/textColor"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/card_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_author"
                    android:textColor="?attr/textColor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/card_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_stats"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp"
                    android:textStyle="italic" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/default_description"
            android:textColor="?attr/textColor"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>