<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/top_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_to_chapter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/baseline_arrow_back_white_48" />

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/action_settings"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarThumbVertical="?attr/textColor"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar_settings">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/theme_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/theme_toggle_label"
                android:textColor="?attr/textColor"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/appThemeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:checkedButton="@id/rbLightTheme"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <RadioButton
                    android:id="@+id/rbLightTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:text="@string/light_theme"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbDarkTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:text="@string/dark_theme"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/rotation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rotation_lock_label"
                android:textColor="?attr/textColor"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/rotationLockRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:checkedButton="@id/rbNoLock"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <RadioButton
                    android:id="@+id/rbNoLock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:text="@string/no_lock"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbLockHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:text="@string/horizontal_lock"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/rbLockVertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:text="@string/vertical_lock"
                    android:textColor="?attr/textColor"
                    android:textSize="14sp" />

            </RadioGroup>

            <TextView
                android:id="@+id/text_size_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_size_label"
                android:textColor="?attr/textColor"
                android:textSize="24sp" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/headingSizeDecreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="true"
                        app:srcCompat="@drawable/baseline_remove_circle_outline_black_36" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/heading_text_size_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_size_heading"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/headingSizeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="24"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/headingSizeIncreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="true"
                        app:srcCompat="@drawable/baseline_add_circle_outline_black_36" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/subheadingSizeDecreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="true"
                        app:srcCompat="@drawable/baseline_remove_circle_outline_black_36" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/subheading_text_size_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_size_subheading"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/subheadingSizeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="18"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/subheadingSizeIncreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        app:srcCompat="@drawable/baseline_add_circle_outline_black_36" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/normalTextSizeDecreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="true"
                        app:srcCompat="@drawable/baseline_remove_circle_outline_black_36" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="8dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/normal_text_size_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/text_size_normal_text"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/normalTextSizeTextView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="14"
                            android:textAlignment="center"
                            android:textColor="?attr/textColor"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/normalTextSizeIncreaseButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="true"
                        app:srcCompat="@drawable/baseline_add_circle_outline_black_36" />
                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/preview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/text_size_preview_label"
                android:textColor="?attr/textColor"
                android:textSize="18sp" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fillViewport="true"
                android:scrollbarThumbVertical="?attr/textColor"
                android:scrollbars="vertical"
                android:verticalScrollbarPosition="right">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp">

                    <TextView
                        android:id="@+id/headingSizePreviewTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size_heading"
                        android:textAlignment="center"
                        android:textColor="?attr/textColor"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/subheadingSizePreviewTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_size_subheading"
                        android:textAlignment="center"
                        android:textColor="?attr/textColor"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/normalTextSizePreviewTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lorem_ipsum"
                        android:textColor="?attr/textColor"
                        android:textSize="14sp" />
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>

            <Button
                android:id="@+id/apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/light_gray"
                android:text="@string/apply"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>